Fix word break in image captions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,13 @@ a, a:hover {
     padding: 4px;
     font-size: 120%;
     text-align: center;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
 
 .figure div.legend {
